--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           <a href="" class="sub-menu-catalog__category">Категория ножей</a>
                           <div class="sub-menu-catalog__decor"></div>
                           <ul class="sub-menu-catalog__list">
-                             <li class="sub-menu-catalog__item"><a href="http://localhost:3000/catalog.html" class="sub-menu-catalog__link sub-menu-catalog__link_active">Разделочные ножи</a></li>
+                             <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link sub-menu-catalog__link_active">Разделочные ножи</a></li>
                              <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Туристические ножи</a></li>
                              <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Ножи охотничьи</a></li>
                              <li class="sub-menu-catalog__item"><a href="" class="sub-menu-catalog__link">Булатные ножи</a></li>
