--- a/catalog.html
+++ b/catalog.html
@@ -258,7 +258,7 @@
    					<h1 class="header-catalog__title">Разделочные ножи</h1>
    					<nav class="breadcrumbs">
    						<ul class="breadcrumbs__list">
-   							<li class="breadcrumbs__item"><a href="http://localhost:3000" class="breadcrumbs__link"><span>Главная</span><svg>
+   							<li class="breadcrumbs__item"><a href="https://svyatoslavairon.github.io/MyProJect-3/" class="breadcrumbs__link"><span>Главная</span><svg>
    										<use xlink:href="./assets/images/sprite.svg#arrow-icon-white"></use>
    									</svg></a></li>
    							<li class="breadcrumbs__item"><span class="breadcrumbs__current">Разделочные ножи</span></li>
