--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="format-detection" content="telephone=no">
    <meta name="description" content="On this site I will study CSS, HTML and Java Script, React">
    <meta name="keywords" content="Java-Script, JS, Java Script, React, HTML, CSS, SCSS, SASS, Home">
-   <title>MyProjectS</title>
+   <title>MyProJect-3</title>
    <link rel="icon" href="assets/images/heart-like.svg">
    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
    <link rel="stylesheet" href="assets/css/index-style.min.css">
